--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-codec-1.9.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\commons-codec-1.9.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.3.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\fluent-hc-4.5.3.jar
+file.reference.gson-2.6.2.jar=C:\\Users\\Miss M\\Downloads\\gson-2.6.2.jar
+file.reference.httpclient-4.5.3.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\httpclient-4.5.3.jar
+file.reference.httpclient-cache-4.5.3.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\httpclient-cache-4.5.3.jar
+file.reference.httpclient-win-4.5.3.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\httpclient-win-4.5.3.jar
+file.reference.httpcore-4.4.6.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\httpcore-4.4.6.jar
+file.reference.httpmime-4.5.3.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\httpmime-4.5.3.jar
+file.reference.jna-4.1.0.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\jna-4.1.0.jar
+file.reference.jna-platform-4.1.0.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\jna-platform-4.1.0.jar
+file.reference.json-20140107.jar=C:\\Users\\Miss M\\Downloads\\json-20140107.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -36,7 +48,19 @@ j2ee.platform=1.7-web
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-20140107.jar}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fluent-hc-4.5.3.jar}:\
+    ${file.reference.httpclient-4.5.3.jar}:\
+    ${file.reference.httpclient-cache-4.5.3.jar}:\
+    ${file.reference.httpclient-win-4.5.3.jar}:\
+    ${file.reference.httpcore-4.4.6.jar}:\
+    ${file.reference.httpmime-4.5.3.jar}:\
+    ${file.reference.jna-4.1.0.jar}:\
+    ${file.reference.jna-platform-4.1.0.jar}:\
+    ${file.reference.gson-2.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
