--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.httpmime-4.5.3.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-c
 file.reference.jna-4.1.0.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\jna-4.1.0.jar
 file.reference.jna-platform-4.1.0.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\jna-platform-4.1.0.jar
 file.reference.json-20140107.jar=C:\\Users\\Miss M\\Downloads\\json-20140107.jar
+file.reference.mysql-connector-java-5.1.44.zip=C:\\Users\\Miss M\\Downloads\\mysql-connector-java-5.1.44.zip
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -60,7 +61,9 @@ javac.classpath=\
     ${file.reference.httpmime-4.5.3.jar}:\
     ${file.reference.jna-4.1.0.jar}:\
     ${file.reference.jna-platform-4.1.0.jar}:\
-    ${file.reference.gson-2.6.2.jar}
+    ${file.reference.gson-2.6.2.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44.zip}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
