--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,7 +65,7 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.44.zip}:\
     ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
