--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,12 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.commons-codec-1.9.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\commons-codec-1.9.jar
+file.reference.commons-lang3-3.6-bin.zip=C:\\Users\\Miss M\\Downloads\\commons-lang3-3.6-bin.zip
+file.reference.commons-lang3-3.6-javadoc.jar=C:\\Users\\Miss M\\Desktop\\commons-lang3-3.6\\commons-lang3-3.6-javadoc.jar
+file.reference.commons-lang3-3.6-sources.jar=C:\\Users\\Miss M\\Desktop\\commons-lang3-3.6\\commons-lang3-3.6-sources.jar
+file.reference.commons-lang3-3.6-test-sources.jar=C:\\Users\\Miss M\\Desktop\\commons-lang3-3.6\\commons-lang3-3.6-test-sources.jar
+file.reference.commons-lang3-3.6-tests.jar=C:\\Users\\Miss M\\Desktop\\commons-lang3-3.6\\commons-lang3-3.6-tests.jar
+file.reference.commons-lang3-3.6.jar=C:\\Users\\Miss M\\Desktop\\commons-lang3-3.6\\commons-lang3-3.6.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\commons-logging-1.2.jar
 file.reference.fluent-hc-4.5.3.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\fluent-hc-4.5.3.jar
 file.reference.gson-2.6.2.jar=C:\\Users\\Miss M\\Downloads\\gson-2.6.2.jar
@@ -41,6 +47,7 @@ file.reference.jna-4.1.0.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client
 file.reference.jna-platform-4.1.0.jar=C:\\Users\\Miss M\\Downloads\\httpcomponents-client-4.5.3\\lib\\jna-platform-4.1.0.jar
 file.reference.json-20140107.jar=C:\\Users\\Miss M\\Downloads\\json-20140107.jar
 file.reference.mysql-connector-java-5.1.44.zip=C:\\Users\\Miss M\\Downloads\\mysql-connector-java-5.1.44.zip
+file.reference.org.springframework.jdbc-3.0.0.M2.jar=C:\\Users\\Miss M\\Desktop\\org.springframework.jdbc-3.0.0.M2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -63,7 +70,16 @@ javac.classpath=\
     ${file.reference.jna-platform-4.1.0.jar}:\
     ${file.reference.gson-2.6.2.jar}:\
     ${file.reference.mysql-connector-java-5.1.44.zip}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-lang3-3.6-bin.zip}:\
+    ${file.reference.commons-lang3-3.6-javadoc.jar}:\
+    ${file.reference.commons-lang3-3.6-sources.jar}:\
+    ${file.reference.commons-lang3-3.6-test-sources.jar}:\
+    ${file.reference.commons-lang3-3.6-tests.jar}:\
+    ${file.reference.commons-lang3-3.6.jar}:\
+    ${libs.MyLibrary.classpath}:\
+    ${file.reference.org.springframework.jdbc-3.0.0.M2.jar}:\
+    ${libs.RowMapLibrary.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint
 javac.debug=true
